# faggruppefagdag-2020-program

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: main.rs
