[package]
name = "faggruppefagdag-program"
version = "0.1.0"
authors = ["Ingar Almklov <ingara@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.14"
cursive-aligned-view = "^0"
cursive_table_view = "0.12"
